--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: 기뮤냊
 tagline: 기뮤냊 개발일지
 
 description: >- # used by seo meta and the atom feed
-  인하대학교 컴퓨터공학과
+  인하대학교 컴퓨터공학과 4학년
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
